--- a/templates/theme_clboost/frontpage.mustache
+++ b/templates/theme_clboost/frontpage.mustache
@@ -80,9 +80,9 @@
                         <div class="region_main_settings_menu_proxy"></div>
                     {{/hasregionmainsettingsmenu}}
                     {{{ output.course_content_header }}}
-                    {{#hasblocks}}
+                    {{#hascontentblocks}}
                         {{{ contentblocks }}}
-                    {{/hasblocks}}
+                    {{/hascontentblocks}}
                     {{{ output.main_content }}}
                     {{{ output.activity_navigation }}}
                     {{{ output.course_content_footer }}}
